# it-word-quiz-kun

./: README.md  main.py  pyproject.toml  word-test.py
